# os_learning

./: .gitignore  CMakeLists.txt  boot.asm  build_os.sh  clean.sh  default-host.sh  iso.sh  kernel.c  qemu.sh  toolchain.cmake
kernel/: CMakeLists.txt  Makefile
kernel/arch/i386/: boot.S  crti.S
libc/: CMakeLists.txt
libc/include/sys/: cdefs.h
libc/stdlib/: abort.c
